attempt to fix james observed activity search overflow

--- a/static/style.scss
+++ b/static/style.scss
@@ -341,7 +341,7 @@ ul {
   display:table;
   table-layout: fixed;
   width:100%;
-  height:90%;
+  //height:90%;
 }
 
 #activitiesTable th,td {
